--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -14,13 +14,14 @@
     <div class="container col">
         <div id="keywords" class="row">
             <form method="GET" class="col-sm form-group">
-                <div class="tag-container">
-                    <input id="queroQueTenha" type="text" class="form-control rounded-pill" placeholder="Quero que tenha">
+                <div class="tag-container form-control rounded-pill">
+                    <input id="queroQueTenha" type="text" class="rounded-pill quero-que-tenha" placeholder="Quero que tenha">
                 </div>
             </form>
             <div class="col-sm form-group">
                 <input type="text" class="form-control rounded-pill" placeholder="Quero que não tenha">
             </div>
+            <script src="{% static 'custom/js/tags.js' %}"></script>
         </div>
         {%include 'parciais/_messages.html'%}
         <!--Depois substituir por um block de conteudo-->
@@ -32,4 +33,3 @@
 </html>
 
 
-<script src="{% static 'custom/js/tags.js' %}"></script>
