--- a/core/templates/parciais/_sidebar.html
+++ b/core/templates/parciais/_sidebar.html
@@ -107,7 +107,7 @@
                 </label>
             </div>
         </div>
-        <button id="search-button" class="btn btn-success" type="submit">
+        <button class="search-button" class="btn btn-success" type="submit">
             <i class="fas fa-search"></i>
         </button>
     </form>
