Corrigindo erros do console do site

--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -14,11 +14,11 @@
     <div class="container col">
         <div id="keywords" class="row">
             <form method="GET" action="{% url 'receita:busca' %}" class="col-sm form-group">
-                <div class="form-control mr-sm-2 tag-container">
+                <div class="form-control mr-sm-2 tag-container form-control rounded-pill">
                     <input class="" arial-label="Search">
                 </div>
-                <button class="search-button" class="btn btn-success" type="submit">
-                    <i class="fas fa-search"></i>
+                <button class="search-button btn btn-primary" class="btn btn-success" type="submit">
+                    Filtrar
                 </button>
             </form>
             <div class="col-sm form-group">
