--- a/core/templates/parciais/_head.html
+++ b/core/templates/parciais/_head.html
@@ -12,12 +12,10 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
 <!--Organizar nome de classes CSS para não haver contradições entre outras páginas -->
-<link rel="stylesheet" href="{% static 'custom/css/style.css' %}">
-<link rel="stylesheet" href="css/cadastro.css">
-<link rel="stylesheet" href="css/editar_receita.css">
+<link rel="stylesheet" type="text/css" href="{% static 'custom/css/style.css' %}">
 <link rel="shortcut icon" type="image/png" href="{% static 'imgs/cookit_user.svg' %}" />
 
-<script src="{% static 'custom/js/favoritos.js' %}"></script>
+<!--<script src="{% static 'custom/js/favoritos.js' %}"></script>-->
 <script src="{% static 'custom/js/login_cadastro.js' %}"></script>
 
 <!--Jquery, Popper, Bootstrap JS e Font Awesome-->
