--- a/core/templates/parciais/_sidebar.html
+++ b/core/templates/parciais/_sidebar.html
@@ -65,49 +65,49 @@
         <div id="categories" class="form-group">
             <h6><b>Categorias:</b></h6>
             <div class="form-check">
-                <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
+                <input class="form-check-input" type="checkbox" value="" >
                 <label class="form-check-label" for="defaultCheck1">
                     Café da manhã
                 </label>
             </div>
             <div class="form-check">
-                <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
+                <input class="form-check-input" type="checkbox" value="" >
                 <label class="form-check-label" for="defaultCheck1">
                     Almoço
                 </label>
             </div>
             <div class="form-check">
-                <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
+                <input class="form-check-input" type="checkbox" value="" >
                 <label class="form-check-label" for="defaultCheck1">
                     Lanche
                 </label>
             </div>
             <div class="form-check">
-                <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
+                <input class="form-check-input" type="checkbox" value="" >
                 <label class="form-check-label" for="defaultCheck1">
                     Janta
                 </label>
             </div>
             <div class="form-check">
-                <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
+                <input class="form-check-input" type="checkbox" value="" >
                 <label class="form-check-label" for="defaultCheck1">
                     Sobremesas
                 </label>
             </div>
             <div class="form-check">
-                <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
+                <input class="form-check-input" type="checkbox" value="" >
                 <label class="form-check-label" for="defaultCheck1">
                     Bebidas
                 </label>
             </div>
             <div class="form-check">
-                <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
+                <input class="form-check-input" type="checkbox" value="" >
                 <label class="form-check-label" for="defaultCheck1">
                     Vegana
                 </label>
             </div>
         </div>
-        <button class="search-button" class="btn btn-success" type="submit">
+        <button class="search-button btn btn-primary" class="btn btn-success" type="submit">
             <i class="fas fa-search"></i>
         </button>
     </form>
