Implementação parcial da responsividade na sidebar

--- a/core/static/custom/css/style.css
+++ b/core/static/custom/css/style.css
@@ -731,6 +731,6 @@ textarea {
     -webkit-box-sizing: content-box;
     box-sizing: content-box;
 }
-.fa-times{
+.tag .fa-times{
     color: white !important;
 }
