--- a/core/templates/parciais/_head.html
+++ b/core/templates/parciais/_head.html
@@ -13,10 +13,12 @@
 
 <!--Organizar nome de classes CSS para não haver contradições entre outras páginas -->
 <link rel="stylesheet" type="text/css" href="{% static 'custom/css/style.css' %}">
+<link rel="stylesheet" type="text/css" href="{% static 'custom/css/resp-style.css' %}">
 <link rel="shortcut icon" type="image/png" href="{% static 'imgs/cookit_user.svg' %}" />
 
 <!--<script src="{% static 'custom/js/favoritos.js' %}"></script>-->
 <script src="{% static 'custom/js/login_cadastro.js' %}"></script>
+<script src="{% static 'custom/js/script.js' %}"></script>
 
 <!--Jquery, Popper, Bootstrap JS e Font Awesome-->
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
