--- a/core/templates/parciais/_navbar.html
+++ b/core/templates/parciais/_navbar.html
@@ -67,10 +67,10 @@
                 onclick="location.href = '{% url 'usuario:criar' %}';loginOpen()">
                 Login
             </button>
-            <button id="cadastro-button" class="btn btn-secondary"
+            <!--<button id="cadastro-button" class="btn btn-secondary"
                 onclick="location.href = '{% url 'usuario:criar' %}';cadastroOpen()">
                 Cadastro
-            </button>
+            </button>-->
 
             </html>
         </ul>
