--- a/core/templates/parciais/_head.html
+++ b/core/templates/parciais/_head.html
@@ -14,6 +14,7 @@
 <!--Organizar nome de classes CSS para não haver contradições entre outras páginas -->
 <link rel="stylesheet" type="text/css" href="{% static 'custom/css/style.css' %}">
 <link rel="stylesheet" type="text/css" href="{% static 'custom/css/resp-style.css' %}">
+<link rel="stylesheet" type="text/css" href="{% static 'custom/css/form_receita.css' %}">
 <link rel="shortcut icon" type="image/png" href="{% static 'imgs/cookit_user.svg' %}" />
 
 <!--<script src="{% static 'custom/js/favoritos.js' %}"></script>-->
@@ -26,4 +27,3 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
 <script src="https://kit.fontawesome.com/99ce75f39c.js" crossorigin="anonymous"></script>
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-
