--- a/core/templates/receita/receita-completa.html
+++ b/core/templates/receita/receita-completa.html
@@ -44,7 +44,8 @@
                                     <i class="far fa-clock"></i>
                                     <br> {% if ingredientes.tempo_preparo %}
                                     <p>
-                                        {{ingredientes.get_tempo_unidade_medida_display}}{{ingredientes.tempo_preparo|length|pluralize}}
+                                        {{ingredientes.tempo_preparo}}
+                                        {{ingredientes.get_tempo_unidade_medida_display}}{{ingredientes.tempo_preparo|pluralize}}
                                     </p>
                                     {% endif %}
                                 </div>
